--- a/INE/src/Formularios/visSolicitudViaticos.form
+++ b/INE/src/Formularios/visSolicitudViaticos.form
@@ -182,7 +182,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Vehiculo:"/>
+            <Property name="text" type="java.lang.String" value="Veh&#xed;culo:"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
